tests/testcases/errors/selective-import.boo
"""
selective-import.boo(5,1): BCE0005: Unknown identifier: 'Console'.
"""
import System(Object)
Console.WriteLine("hello")
